[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/square.gd" type="Script" id=1]
[ext_resource path="res://scripts/square_click.gd" type="Script" id=2]
[ext_resource path="res://assets/art/square.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="Box" type="Node2D"]
position = Vector2( 392, 288 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="box_sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="rotate_left" from="Area2D" to="." method="_on_Area2D_rotate_left"]
[connection signal="rotate_right" from="Area2D" to="." method="_on_Area2D_rotate_right"]
